# ThePepEffect

./: LICENSE  README.md  hello.py  pyproject.toml
analysis/: ThePepEffect.ipynb  clustered_teams.csv  clustered_teams_k11.csv
data/: example_data.csv  top5Leagues.csv  top5LeaguesADJUSTED.csv
scripts/: FBRefScraper.py
