[project]
name = "thepepeffect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ace-tools>=0.0",
    "adjusttext>=1.3.0",
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
